--- a/N1/N1.csproj
+++ b/N1/N1.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Max.FileBaseContext.Context" Version="0.0.7" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.12" />
+  </ItemGroup>
+
 </Project>
